package abstractFactory;

/**
 * @author ioeah
 * @version 1.0
 * @date 2023/3/21 8:18
 */
public interface CPU {

    public void run();
}
