package abstractFactory;

/**
 * @author ioeah
 * @version 1.0
 * @date 2023/3/21 8:19
 */
public interface RAM {

    public void start();
}
